--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <!-- Servicio 1: Uñas Acrílicas -->
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="/api/placeholder/350/250" alt="Uñas Acrílicas">
+                        <img src="IMAGENES/diseno-de-unas-acrilicas-.jpg" alt="Uñas Acrílicas">
                     </div>
                     <div class="service-info">
                         <h3>Uñas Acrílicas</h3>
@@ -48,7 +48,7 @@
                 <!-- Servicio 2: Uñas de Gel -->
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="/api/placeholder/350/250" alt="Uñas de Gel">
+                        <img src="IMAGENES/gel.jpg" alt="Uñas de Gel">
                     </div>
                     <div class="service-info">
                         <h3>Uñas de Gel</h3>
@@ -65,7 +65,7 @@
                 <!-- Servicio 3: Uñas Polygel -->
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="/api/placeholder/350/250" alt="Uñas Polygel">
+                        <img src="IMAGENES/polygel.jpg" alt="Uñas Polygel">
                     </div>
                     <div class="service-info">
                         <h3>Uñas Polygel</h3>
@@ -82,7 +82,7 @@
                 <!-- Servicio 4: Fibra de Vidrio -->
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="/api/placeholder/350/250" alt="Fibra de Vidrio">
+                        <img src="IMAGENES/vidrio.jpg" alt="Fibra de Vidrio">
                     </div>
                     <div class="service-info">
                         <h3>Fibra de Vidrio</h3>
@@ -99,7 +99,7 @@
                 <!-- Servicio 5: Press-on Nails -->
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="/api/placeholder/350/250" alt="Press-on Nails">
+                        <img src="IMAGENES/Press-on Nails.png" alt="Press-on Nails">
                     </div>
                     <div class="service-info">
                         <h3>Press-on Nails</h3>
