--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <main>
         <section id="inicio" class="hero">
             <div class="hero-content">
+                <div><img src="IMAGENES/DISEÑO UÑAS.jpg" alt=""></div>
                 <h1>Transforma tus Uñas</h1>
                 <p>Servicios profesionales de diseño y extensión de uñas</p>
                 <a href="#servicios" class="btn">Descubre Nuestros Servicios</a>
