--- a/index.html
+++ b/index.html
@@ -115,7 +115,15 @@
                 </div>
             </div>
         </section>
-
+        <section id="clasificacion" class="services-section">
+            <h2>Tendencias en Uñas para Otoño-Invierno 2024</h2>
+            <div class="services-grid">
+            <div class="rating-card">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/J-J6HQBC3zY?si=jlFrjnYVUK0TByqh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <button class="btn-agendar">Solicitar cupón de descuento</button>
+                </ol>
+            </div>
+        </section>
         <section id="contacto" class="contact-section">
             <div class="contact-card">
                 <h2>Contáctanos</h2>
@@ -130,7 +138,6 @@
             </div>
         </section>
     </main>
-
     <footer class="footer">
         <div class="footer-content">
             <p>© 2024 Nails & Beauty. Todos los derechos reservados.</p>
