--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                     <p>📞 Teléfono: (55) 1234-5678</p>
                     <p>✉️ Email: contacto@nailsandbeauty.com</p>
                     <p>⏰ Horarios: Lun-Sáb 10:00 - 20:00</p>
-                    <a href="#" class="btn">Whatsapp</a>
-                    <a href="#" class="btn">Reservar Cita</a>
+                    <a href="https://web.whatsapp.com/" class="btn">Whatsapp</a>
+                    <a href="FORM.html" class="btn">Reservar Cita</a>
                 </div>
             </div>
         </section>
@@ -142,9 +142,9 @@
         <div class="footer-content">
             <p>© 2024 Nails & Beauty. Todos los derechos reservados.</p>
             <div class="social-links">
-                <a href="#">Instagram</a>
-                <a href="#">Facebook</a>
-                <a href="#">TikTok</a>
+                <a href="https://www.instagram.com/">Instagram</a>
+                <a href="https://es-la.facebook.com/">Facebook</a>
+                <a href="https://www.tiktok.com/es/">TikTok</a>
             </div>
         </div>
     </footer>
